[package]
name = "powerplay_warpdrive"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.4"
nb = "1.0.0"
stm32f1xx-hal = { version = "0.9.0", features = ["rt", "stm32f105", "medium"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
